SDIT-997 Add non-associations migration
