# openapi-specs/nomis-sync-api-docs.json
@@ -7,7 +7,7 @@
       "name": "HMPPS Digital Studio",
       "email": "feedback@digital.justice.gov.uk"
     },
-    "version": "2023-09-07.4820.835c8db"
+    "version": "2023-09-13.4873.2a3d5ae"
   },
   "servers": [
     {
@@ -461,14 +461,14 @@
         }
       }
     },
-    "/non-associations/offender/{offenderNo}/ns-offender/{nsOffenderNo}": {
-      "get": {
+    "/non-associations/offender/{offenderNo}/ns-offender/{nsOffenderNo}/sequence/{typeSequence}": {
+      "put": {
         "tags": [
           "non-association-resource"
         ],
-        "summary": "Get an open non-association",
-        "description": "Get the open non-association for the two offender numbers. Requires role NOMIS_NON_ASSOCIATIONS",
-        "operationId": "getNonAssociation",
+        "summary": "Updates an existing non-association",
+        "description": "Updates an existing non-association. Requires role NOMIS_NON_ASSOCIATIONS",
+        "operationId": "updateNonAssociation",
         "parameters": [
           {
             "name": "offenderNo",
@@ -492,29 +492,42 @@
           },
           {
             "name": "typeSequence",
-            "in": "query",
-            "description": "Sequence number. If present, get this detail record, otherwise get the open record if there is one.",
-            "required": false,
+            "in": "path",
+            "description": "Sequence number. Amend this specific detail record",
+            "required": true,
             "schema": {
               "type": "integer",
               "format": "int32"
             },
-            "example": 2
+            "example": 1
           }
         ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateNonAssociationRequest"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
-            "description": "Non-association information",
+            "description": "Successfully amended non-association"
+          },
+          "404": {
+            "description": "Non-association does not exist",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/NonAssociationResponse"
+                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
           },
-          "404": {
-            "description": "No open non-association exists for these offender numbers, or one of the offenders does not exist",
+          "400": {
+            "description": "Invalid data such as reason or type do not exist etc.",
             "content": {
               "application/json": {
                 "schema": {
@@ -545,13 +558,13 @@
           }
         }
       },
-      "put": {
+      "delete": {
         "tags": [
           "non-association-resource"
         ],
-        "summary": "Updates an existing non-association",
-        "description": "Updates an existing non-association. Requires role NOMIS_NON_ASSOCIATIONS",
-        "operationId": "updateNonAssociation",
+        "summary": "Deletes a non-association",
+        "description": "Deletes the specified non-association detail record. if there was only one, the parent NA record is deleted too. Requires role NOMIS_NON_ASSOCIATIONS",
+        "operationId": "deleteNonAssociation",
         "parameters": [
           {
             "name": "offenderNo",
@@ -572,34 +585,25 @@
               "type": "string"
             },
             "example": "A34578ED"
+          },
+          {
+            "name": "typeSequence",
+            "in": "path",
+            "description": "Sequence number. Close this specific detail record",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "example": 2
           }
         ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateNonAssociationRequest"
-              }
-            }
-          },
-          "required": true
-        },
         "responses": {
           "200": {
-            "description": "Successfully updated non-association"
+            "description": "Success"
           },
           "404": {
             "description": "Non-association does not exist",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid data such as reason or type do not exist etc.",
             "content": {
               "application/json": {
                 "schema": {
@@ -1540,7 +1544,7 @@
           "adjudication-resource"
         ],
         "summary": "Updates a hearing",
-        "description": "Updates an hearing for a given adjudication and hearing Id. Requires ROLE_NOMIS_ADJUDICATIONS",
+        "description": "Updates a hearing for a given adjudication and hearing Id. Requires ROLE_NOMIS_ADJUDICATIONS",
         "operationId": "updateHearing",
         "parameters": [
           {
@@ -1611,6 +1615,75 @@
           },
           "404": {
             "description": "Hearing does not exist",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "adjudication-resource"
+        ],
+        "summary": "Deletes a hearing",
+        "description": "Deletes a hearing for a given adjudication and hearing Id. Requires ROLE_NOMIS_ADJUDICATIONS",
+        "operationId": "deleteHearing",
+        "parameters": [
+          {
+            "name": "adjudicationNumber",
+            "in": "path",
+            "description": "Adjudication number",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Adjudication number",
+              "example": 12345
+            },
+            "example": 12345
+          },
+          {
+            "name": "hearingId",
+            "in": "path",
+            "description": "Hearing Id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "description": "Hearing Id",
+              "example": 12345
+            },
+            "example": 12345
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Hearing deleted"
+          },
+          "401": {
+            "description": "Unauthorized to access this endpoint",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden to access this endpoint. Requires ROLE_NOMIS_ADJUDICATIONS",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Adjudication does not exist",
             "content": {
               "application/json": {
                 "schema": {
@@ -2833,7 +2906,7 @@
           "adjudication-resource"
         ],
         "summary": "creates a hearing for a given adjudication",
-        "description": "Creates an hearing for a given adjudication. Requires ROLE_NOMIS_ADJUDICATIONS",
+        "description": "Creates a hearing for a given adjudication. Requires ROLE_NOMIS_ADJUDICATIONS",
         "operationId": "createHearing",
         "parameters": [
           {
@@ -3265,6 +3338,91 @@
           },
           "403": {
             "description": "Forbidden to access this endpoint when role SYNCHRONISATION_REPORTING not present",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/non-associations/offender/{offenderNo}/ns-offender/{nsOffenderNo}": {
+      "get": {
+        "tags": [
+          "non-association-resource"
+        ],
+        "summary": "Get an open non-association",
+        "description": "Get the open non-association for the two offender numbers. Requires role NOMIS_NON_ASSOCIATIONS",
+        "operationId": "getNonAssociation",
+        "parameters": [
+          {
+            "name": "offenderNo",
+            "in": "path",
+            "description": "Offender",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "A3456GH"
+          },
+          {
+            "name": "nsOffenderNo",
+            "in": "path",
+            "description": "Non-association offender",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "A34578ED"
+          },
+          {
+            "name": "typeSequence",
+            "in": "query",
+            "description": "Sequence number. If present, get this detail record, otherwise get the open record if there is one.",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "example": 2
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Non-association information",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NonAssociationResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No open non-association exists for these offender numbers, or one of the offenders does not exist",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized to access this endpoint",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden, requires role NOMIS_NON_ASSOCIATIONS",
             "content": {
               "application/json": {
                 "schema": {
@@ -7197,15 +7355,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
@@ -7387,15 +7545,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
@@ -7537,15 +7695,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
@@ -7662,15 +7820,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
@@ -7803,15 +7961,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
@@ -7956,15 +8114,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
@@ -8027,15 +8185,15 @@
           "sort": {
             "$ref": "#/components/schemas/SortObject"
           },
-          "pageable": {
-            "$ref": "#/components/schemas/PageableObject"
+          "numberOfElements": {
+            "type": "integer",
+            "format": "int32"
           },
           "last": {
             "type": "boolean"
           },
-          "numberOfElements": {
-            "type": "integer",
-            "format": "int32"
+          "pageable": {
+            "$ref": "#/components/schemas/PageableObject"
           },
           "empty": {
             "type": "boolean"
